# rustdesk

./: .gitignore  AGENTS.md  Cargo.toml  build.py
.cargo/: config.toml
flutter/: pubspec.yaml
flutter/lib/: common.dart  consts.dart  main.dart
flutter/lib/common/widgets/: custom_scale_base.dart  dialog.dart  remote_input.dart  toolbar.dart
flutter/lib/desktop/pages/: connection_page.dart  (+6 more)
flutter/lib/models/: model.dart
flutter/lib/prototyping/: main_toolbar_lab.dart  toolbar_lab_page.dart
flutter/lib/utils/: scale.dart
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/test/: first_run_wizard_test.dart  network_status_panel_test.dart
flutter/windows/: CMakeLists.txt
libs/magnum-opus/: Cargo.toml  build.rs
libs/magnum-opus/src/: lib.rs
libs/portable/: Cargo.toml
libs/remote_printer/: Cargo.toml
libs/scrap/: Cargo.toml  build.rs
pkgconfig/: libunwind.pc
prototyping/: README.md
scripts/: README.md  build_linux.sh  build_macos.sh  build_windows.ps1
src/: client.rs  clipboard.rs  common.rs  flutter.rs  flutter_ffi.rs  ipc.rs  keyboard.rs  lan.rs  lang.rs  lib.rs  privacy_mode.rs  rendezvous_mediator.rs  server.rs  tray.rs  ui_cm_interface.rs  ui_interface.rs  ui_session_interface.rs
src/hbbs_http/: account.rs  downloader.rs  sync.rs
src/lang/: en.rs
src/platform/: linux.rs  windows.rs
src/privacy_mode/: macos.rs
src/server/: clipboard_service.rs  connection.rs  display_service.rs  input_service.rs  portable_service.rs  rdp_input.rs  terminal_service.rs  uinput.rs
src/ui/: remote.rs
src/whiteboard/: mod.rs
(+5 files in other folders)
