[package]
name = "magnum-opus"
version = "0.4.0"
authors = ["Tad Hardesty <tad@platymuus.com>", "Sergey Duck <sergeypechnikov326@gmail.com>"]
edition = "2018"
description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]

repository = "https://github.com/DuckerMan/magnum-opus"
documentation = "https://docs.rs/magnum-opus"

[features]
linux-pkg-config = ["dep:pkg-config"]

[build-dependencies]
target_build_utils = "0.3"
bindgen = "0.59"
pkg-config = { version = "0.3.27", optional = true }
